Fix content box
Update scrollbar
Add close icon
Clean code

--- a/Practical 2/Task 2/style.css
+++ b/Practical 2/Task 2/style.css
@@ -1,5 +1,10 @@
+html {
+  /* box-sizing: border-box; */
+}
+
+/* Scrollbar Modifications: https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
 .text-container::-webkit-scrollbar {
-  width: 12px; /* width of the entire scrollbar */
+  width: 4px; /* width of the entire scrollbar */
 }
 
 .text-container::-webkit-scrollbar-track {
@@ -9,16 +14,12 @@
 .text-container::-webkit-scrollbar-thumb {
   background-color: darkgreen; /* color of the scroll thumb */
   border-radius: 20px; /* roundness of the scroll thumb */
-  border: 3px solid transparent; /* creates padding around scroll thumb */
+  border: 5px solid transparent; /* creates padding around scroll thumb */
 }
 
 .text-container {
   scrollbar-width: thin; /* "auto" or "thin" */
-  scrollbar-color: blue orange; /* scroll thumb and track */
-}
-
-html {
-  box-sizing: border-box;
+  scrollbar-color: tran darkgreen; /* scroll thumb and track */
 }
 
 .background-container {
@@ -47,6 +48,14 @@ html {
   width: 10%;
 }
 
+.exit-icon {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 5;
+  cursor: pointer;
+}
+
 .nav-link {
   text-decoration: none;
   font-size: 1.5rem;
@@ -55,10 +64,10 @@ html {
 }
 
 .content-container {
-  /* height: 80vh; */
   position: fixed;
-  max-width: 80vw;
+  width: 80vw;
   max-height: 80vh;
+  max-width: 1200px;
   background-color: white;
   border: 4px solid black;
   box-shadow: 3px 3px darkgray;
@@ -68,7 +77,6 @@ html {
   align-items: stretch;
 }
 
-.image-container,
 .text-container {
   width: 49%;
   height: auto;
@@ -79,17 +87,15 @@ html {
 
 .text-container {
   overflow-y: scroll;
-  /* right: 0; */
   position: relative;
   width: 40vw;
-  /* position: absolute;
-  right: 0;
-  top: 0; */
 }
 
 .ignore-height {
   position: absolute;
   top: 0;
+  left: 2rem;
+  right: 2rem;
   height: 100%;
 }
 
@@ -104,6 +110,23 @@ html {
   .content-container {
     overflow-y: scroll;
     display: block;
+  }
+
+  .content-container::-webkit-scrollbar,
+  .text-container::-webkit-scrollbar {
+    display: none;
+  }
+
+  .ignore-height {
+    text-align: justify;
+    position: relative;
+    width: 90%;
+    overflow: hidden;
+  }
+
+  .content-container,
+  .ignore-height {
+    scrollbar-width: none; /* Firefox */
   }
 
   .main-image {
